# amp

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/example/amp/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: nav_rail.dart
lib/screens/tabs/: home.dart  library.dart  stats.dart  zen.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/hub/: Cargo.toml
native/hub/src/: lib.rs
native/hub/src/modules/: mod.rs
native/hub/src/modules/media_manager/: mod.rs  signals.rs
native/hub/src/modules/player/: mod.rs  types.rs
web/: index.html
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
